cmake_minimum_required(VERSION 3.17)
project(untitled2)
set(CMAKE_CXX_STANDARD 17)
list(APPEND CMAKE_PREFIX_PATH "/root/vcpkg/installed/x64-linux")
find_package(Boost REQUIRED COMPONENTS coroutine system thread)
find_package(glog CONFIG REQUIRED)
add_executable(untitled2 producer-consumer.cpp)
target_include_directories(untitled2 PUBLIC ${Boost_INCLUDE_DIRS})
target_link_libraries(untitled2 ${Boost_LIBRARIES} glog::glog)